Added separating for a more logical orders, delete second book from BookRepositoryTest